分文件执行，完善执行顺序
份文件执行，完善执行顺序

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,6 @@
     </title>
     <link href="./css/bootstrap.min.css" rel="stylesheet">
 
-    <link href="./css/bootstrap-theme.min.css" data-href="./css/bootstrap-theme.min.css" rel="stylesheet"
-            >
     <link rel="stylesheet/less" type="text/css" href="./css/style.less">
 </head>
 <body ng-controller="TestAllCrl">
@@ -27,8 +25,8 @@
 <div class="container container-margin-top">
     <div class="col-md-10" role="main">
         <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="{{runStepCount * 100 / stepCount}}"
-                 aria-valuemin="0" aria-valuemax="100" style="width: {{runStepCount * 100 / stepCount}}%;">
+            <div class="progress-bar" role="progressbar" aria-valuenow="{{stepCount * 100 /runStepCount }}"
+                 aria-valuemin="0" aria-valuemax="100" style="width: {{ stepCount* 100 / runStepCount}}%;">
                 <span class="sr-only">0% Complete</span>
             </div>
         </div>
@@ -75,8 +73,13 @@
         </div>
     </div>
     <div class="col-md-2">
-        <!--<button type="button" id="start" class="btn btn-sm btn-success">运行</button><br>-->
-     <!--   <button type="button" class="btn btn-primary btn-sm" name="group">展开/收起</button>-->
+        <select id="testFile"class="form-control">
+            <option>testA.js</option>
+            <option>testB.js</option>
+            <option>testC.js</option>
+        </select>
+
+        <button type="button" id="start" class="btn btn-sm btn-success">运行</button><br>
         <div class="affix" data-offset-top="20px" id="navbar">
             <ul class="nav">
                 <li class="nav-li" ng-repeat="service in groups">
@@ -95,7 +98,7 @@
     </div>
 </div>
 </div>
-<script src="./testA.js"></script>
+<script src="test/testA.js"></script>
 <script src="./js/jquery.min.js"></script>
 <script src="./js/bootstrap.min.js"></script>
 <script src="./js/angular.min.js"></script>
