--- a/public/index.html
+++ b/public/index.html
@@ -74,9 +74,7 @@
     </div>
     <div class="col-md-2">
         <select id="testFile"class="form-control">
-            <option>testA.js</option>
-            <option>testB.js</option>
-            <option>testC.js</option>
+            <option ng-repeat="fileName in testFiles">{{fileName}}</option>
         </select>
 
         <button type="button" id="start" class="btn btn-sm btn-success">运行</button><br>
